<resources>
    <string name="app_name">                    Train Monitor</string>
    <string name="edit">                        edit</string>
    <string name="Preferences">                 preferences</string>
    <string name="Delete_all_trains">           delete all trains</string>
    <string name="hint_train_number">           train number</string>
    <string name="text_update_interval">        update interval</string>
    <string name="radioB_1_hint">               15000</string>
    <string name="radioB_1_text">               15 sec.</string>
    <string name="radioB_2_hint">               30000</string>
    <string name="radioB_2_text">               30 sec.</string>
    <string name="radioB_3_hint">               60000</string>
    <string name="radioB_3_text">               1 min.</string>
    <string name="radioB_4_hint">               120000</string>
    <string name="radioB_4_text">               2 min.</string>
    <string name="button_add_train">            add train</string>
    <string name="text_train_default">          train: ####</string>
    <string name="apply_changes">               apply changes</string>
    <string name="delete_train">                delete train</string>
    <string name="dont_exist">                  doesn\'t exist</string>
    <string name="arrived">                     arrived</string>
    <string name="not_travelling">              not Travelling</string>
    <string name="on_time">                     on time</string>
    <string name="mintes_delay">                minutes delay</string>
    <string name="not_found">                   not found</string>
    <string name="mainscreen_train">            train:</string>
    <string name="mainscreen_unknown_delay">    unknown</string>
    <string name="mainscreen_updating">         updating data</string>
    <string name="mainscreen_empty_slot">       Empty slot</string>
    <string name="mainscreen_not_monitored">    Not monitored</string>
    <string name="mainscreen_button_start">     start</string>
    <string name="mainscreen_button_stop">      stop</string>
    <string name="toast_insert_train">          insert a train number</string>
    <string name="toast_reset_done">            reset done!</string>
    <string name="toast_no_changes">            nothing to change</string>
    <string name="toast_polling_changed">       polling time changed</string>
    <string name="toast_unit">                  unit_</string>
    <string name="toast_in_hive_yet">           in the hive yet</string>
    <string name="toast_cannot_be_execute">     cannot be executed</string>
    <string name="toast_dead_yet">              dead yet</string>
    <string name="is_already_monitored">        is already monitored</string>
    <string name="preferences_list_title">Preferences list</string>
</resources>
